Moved work from object_store_api